Resolved logs overflow bug

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -150,6 +150,7 @@ p{
     flex-direction: column;
     justify-content: flex-end;
     padding-bottom: 10px;
+    overflow: scroll;
 }
 
 .log-row{
